Issue #19663: Improve error message for defaultdict.